--- a/index.html
+++ b/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta property="og:site_name" content=“Carol Iskiwitch” />
-<meta property="og:locale " content="en" />
-<meta property="og:url" content="https://www.caroliskiwitch.com/" />
-<meta property="og:title" content=“Carol Iskiwitch” />
-<meta property="og:description" content=“Homepage of Carol Iskiwitch, Social Psychology PhD student at the University of Southern California studying how people think about morality, gender, and societal change.“ />
+	<meta property="og:site_name" content=“Carol Iskiwitch” />
+	<meta property="og:locale " content="en" />
+	<meta property="og:url" content="https://www.caroliskiwitch.com/" />
+	<meta property="og:title" content=“Carol Iskiwitch” />
+	<meta property="og:description" content=“Homepage of Carol Iskiwitch, Social Psychology PhD student at the University of Southern California studying how people think about morality, gender, and societal change.“ />
+	<title>Carol iskiwitch</title>
 </head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I'm Hank Quinlan!</h1>
+				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
+        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+			</ul>
+		</footer>
 </body>
 </html>
