--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<meta property="og:title" content=“Carol Iskiwitch” />
 	<meta property="og:description" content=“Homepage of Carol Iskiwitch, Social Psychology PhD student at the University of Southern California studying how people think about morality, gender, and societal change.“ />
 	<title>Carol iskiwitch</title>
+	<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 <body>
 <nav>
