--- a/index.html
+++ b/index.html
@@ -1,35 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta property="og:site_name" content=“Carol Iskiwitch” />
-	<meta property="og:locale " content="en" />
-	<meta property="og:url" content="https://www.caroliskiwitch.com/" />
-	<meta property="og:title" content=“Carol Iskiwitch” />
-	<meta property="og:description" content=“Homepage of Carol Iskiwitch, Social Psychology PhD student at the University of Southern California studying how people think about morality, gender, and societal change.“ />
-	<title>Carol iskiwitch</title>
-	<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-</head>
-<body>
-<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-</body>
-</html>
+---
+layout: default
+title: Carol Iskiwitch
+---
+<div class="blurb">
+	<h1>Carol Iskiwitch</h1>
+	<p> I am a PhD student in <a href="https://en.wikipedia.org/wiki/Social_psychology">Social Psychology</a> at the <a href="https://www.usc.edu/">University of Southern California</a>. I study how people think about morality, gender, and societal change. I work primarily with <a href="http://dornsife.usc.edu/wendy-wood/">Dr. Wendy Wood</a> and <a href="http://eccles.utah.edu/team/jesse-graham/">Dr. Jesse Graham</a>.
+	</p>
+</div><!-- /.blurb -->
