--- a/resources/index.html
+++ b/resources/index.html
@@ -1,1 +1,21 @@
-
+---
+layout: default
+title: Carol Iskiwitch
+---
+<div class="blurb">
+  <h1> Academic and scientific resources</h1>
+	<h2>Statistics and methods</h2>
+ 	<p> Free self-paced online course: <a href="https://www.coursera.org/learn/statistical-inferences?action=enroll">
+    Improving your statistical inference</a> </p>
+  <p> Free stats and R textbook, and self-paced online course: <a href="http://www-bcf.usc.edu/~gareth/ISL/">
+    An Introduction to Statistical Learning with Applications in R</a> </p>
+  <p> From the writers of the textbook "Introduction to the New Statistics", which focuses on estimation and open science, 
+    <a href="https://thenewstatistics.com/itns/get-started/">A resource list</a> </p>
+  <p> Free online course: <a href="http://datascience.tntlab.org/schedule-materials/">
+    Data Science for Social Scientists</a></p>
+  <p> Shiny app: <a href="http://rpsychologist.com/d3/pdist/">
+    Visualizing the distribution of p-values when comparing two groups (when the null is false)</a></p>
+  <p> Shiny app: <a href="http://rpsychologist.com/d3/cohend/">
+    Visualization and interpretation of Cohen's d effect size</a></p>
+  
+ </div><!-- /.blurb -->
