--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Carol Iskiwitch
 ---
 <div class="blurb">
 	<h1>Carol Iskiwitch</h1>
- 	<p> I am a PhD student in <a href="https://en.wikipedia.org/wiki/Social_psychology">Social Psychology</a>
+ 	<p> Hi! I am a PhD student in <a href="https://en.wikipedia.org/wiki/Social_psychology">Social Psychology</a>
 		at the <a href="https://www.usc.edu/">University of Southern California</a>. 
 		I study how people think about, and respond to, moral changes within themselves and in society.
 		I work primarily with <a href="http://dornsife.usc.edu/wendy-wood/">Dr. Wendy Wood</a>
