--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ title: Carol Iskiwitch
 	<h1>Carol Iskiwitch</h1>
  	<p> Hi! I am a PhD student in <a href="https://en.wikipedia.org/wiki/Social_psychology">Social Psychology</a>
 		at the <a href="https://www.usc.edu/">University of Southern California</a>. 
-		I study how people think about, and respond to, moral changes within themselves and in society.
+		I study how people think about, and respond to, moral changes within themselves, in other people,
+		and in society at large.
 		I work primarily with <a href="http://dornsife.usc.edu/wendy-wood/">Dr. Wendy Wood</a>
 		and <a href="http://eccles.utah.edu/team/jesse-graham/">Dr. Jesse Graham</a>.
  	More content coming soon!
