--- a/resources/index.html
+++ b/resources/index.html
@@ -5,12 +5,12 @@ title: Carol Iskiwitch
 <div class="blurb">
   <h1> Scientific resources</h1>
   <h2>Statistics and methods</h2>
-  <p> Free self-paced online course: <a href="https://www.coursera.org/learn/statistical-inferences?action=enroll">
-    Improving your statistical inference</a> </p>
-  <p> Free stats and R textbook, and self-paced online course: <a href="http://www-bcf.usc.edu/~gareth/ISL/">
-    An Introduction to Statistical Learning with Applications in R</a> </p>
-  <p> Free online course: <a href="http://datascience.tntlab.org/schedule-materials/">
-    Data Science for Social Scientists</a></p>
+  <p> <a href="https://www.coursera.org/learn/statistical-inferences?action=enroll">
+    Improving your statistical inference</a> (a free, self-paced course) </p>
+  <p> <a href="http://www-bcf.usc.edu/~gareth/ISL/">
+    An Introduction to Statistical Learning with Applications in R</a> (a free textbook and online course: </p>
+  <p> <a href="http://datascience.tntlab.org/schedule-materials/">
+    Data Science for Social Scientists</a> (a free online course) </p>
   <p> Getting started with "The New Statistics": 
     <a href="https://thenewstatistics.com/itns/get-started/">Resource list</a> </p>
   
