--- a/resources/index.html
+++ b/resources/index.html
@@ -6,11 +6,11 @@ title: Carol Iskiwitch
   <h1> Scientific resources</h1>
   <h2>Statistics and methods</h2>
   <p> <a href="https://www.coursera.org/learn/statistical-inferences?action=enroll">
-    Improving your statistical inference</a> (a free, self-paced course) </p>
+    Improving your statistical inference</a> (free, self-paced course) </p>
   <p> <a href="http://www-bcf.usc.edu/~gareth/ISL/">
-    An Introduction to Statistical Learning with Applications in R</a> (a free textbook and online course: </p>
+    An Introduction to Statistical Learning with Applications in R</a> (free textbook and course) </p>
   <p> <a href="http://datascience.tntlab.org/schedule-materials/">
-    Data Science for Social Scientists</a> (a free online course) </p>
+    Data Science for Social Scientists</a> (free online course) </p>
   <p> Getting started with "The New Statistics": 
     <a href="https://thenewstatistics.com/itns/get-started/">Resource list</a> </p>
   
